[gd_scene load_steps=6 format=2]

[ext_resource path="res://Dice/Interact.gd" type="Script" id=1]
[ext_resource path="res://Dice/SimpleDie.tscn" type="PackedScene" id=2]
[ext_resource path="res://Dice/Die.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23, 23 )

[sub_resource type="QuadMesh" id=1]
size = Vector2( 200, 250 )

[node name="Die" type="Node2D"]
script = ExtResource( 3 )

[node name="Interact" type="KinematicBody2D" parent="."]
z_index = 1
input_pickable = true
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="Interact"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
z_index = 1
shape = SubResource( 2 )

[node name="Simple" parent="." instance=ExtResource( 2 )]

[node name="Background" type="MeshInstance2D" parent="."]
self_modulate = Color( 0.145098, 0.133333, 0.133333, 0.517647 )
scale = Vector2( 0.5, 0.5 )
mesh = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="F1" parent="Background" instance=ExtResource( 2 )]
position = Vector2( 0, -79.5 )

[node name="F2" parent="Background" instance=ExtResource( 2 )]
position = Vector2( -51, -79.5 )

[node name="F3" parent="Background" instance=ExtResource( 2 )]
position = Vector2( 0, -26.5 )

[node name="F4" parent="Background" instance=ExtResource( 2 )]
position = Vector2( 0, 79.5 )

[node name="F5" parent="Background" instance=ExtResource( 2 )]
position = Vector2( 51, -79.5 )

[node name="F6" parent="Background" instance=ExtResource( 2 )]
position = Vector2( 0, 26.5 )

[connection signal="input_event" from="Interact" to="." method="_on_Interact_input_event"]
[connection signal="mouse_entered" from="Interact" to="." method="_on_Interact_mouse_entered"]
[connection signal="mouse_exited" from="Interact" to="." method="_on_Interact_mouse_exited"]
